atualização do index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="inicio" class="principal">
         <div>
-            <img src="../MediaLibrary/foto-perfil3.png" alt="Foto de Pedro Galvão" class="foto-circular">
+            <img src="./MediaLibrary/foto-perfil.png" alt="Foto de Pedro Galvão" class="foto-circular">
             <h1>Olá, eu sou <span>Pedro Galvão</span>.</h1>
             <p>Desenvolvedor criativo focado em construir experiências digitais excepcionais e interfaces intuitivas.
             </p>
@@ -40,16 +40,15 @@
         <div class="grade-projetos">
             <div class="card-projetos">
                 <video muted>
-                    <source src="../MediaLibrary/Site-de-Serviços-Irmãos-Mario-Bross.mp4" type="video/mp4">
+                    <source src="./MediaLibrary/Site-de-Serviços-Irmãos-Mario-Bross.mp4" type="video/mp4">
                 </video>
-                
                 <h3>Site de Serviços - Irmãos Mario Bross</h3>
                 <p>Projeto criado utilizando as tecnologias HTML, CSS e JavaScript.</p>
-                <a href="../MediaLibrary/Site-de-Serviços-Irmãos-Mario-Bross.mp4" class="botao-projeto">Ver Projeto</a>
+                <a href="./MediaLibrary/Site-de-Serviços-Irmãos-Mario-Bross.mp4" class="botao-projeto">Ver Projeto</a>
             </div>
             <div class="card-projetos">
                 <video muted>
-                    <source src="../MediaLibrary/G - Clone-Instante e mais 2.mp4" type="video/mp4">
+                    <source src="./MediaLibrary/G - Clone-Instante e mais 2.mp4" type="video/mp4">
                 </video>
                 <h3>Clone Instante</h3>
                 <p>Projeto criado utilizando as tecnologias HTML, CSS e JavaScript.</p>
@@ -58,24 +57,24 @@
             </div>
             <div class="card-projetos">
                 <video muted>
-                    <source src="../MediaLibrary/Site para-Escola-G-Tch.mp4" type="video/mp4">
+                    <source src="./MediaLibrary/Site para-Escola-G-Tch.mp4" type="video/mp4">
                 </video>
                 <h3>Site para Escola - GTch</h3>
                 <p>Projeto criado utilizando as tecnologias HTML, CSS e JavaScript.</p>
-                <a href="../MediaLibrary/Site para-Escola-G-Tch.mp4" class="botao-projeto">Ver Projeto</a>
+                <a href="./MediaLibrary/Site para-Escola-G-Tch.mp4" class="botao-projeto">Ver Projeto</a>
             </div>
             <div class="card-projetos">
                 <video muted>
-                    <source src="../MediaLibrary/Game-Mario-Open-World.mp4" type="video/mp4">
+                    <source src="./MediaLibrary/Game-Mario-Open-World.mp4" type="video/mp4">
                 </video>
                 <h3>Game Mario Open World</h3>
                 <p>Projeto criado utilizando as tecnologias HTML, CSS e JavaScript.</p>
-                <a href="../MediaLibrary/Game-Mario-Open-World.mp4" class="botao-projeto">Ver Projeto</a>
+                <a href="./MediaLibrary/Game-Mario-Open-World.mp4" class="botao-projeto">Ver Projeto</a>
             </div>
 
             <div class="card-projetos">
                 <video muted>
-                    <source src="../MediaLibrary/Game-Detona-Ralph.mp4" type="video/mp4">
+                    <source src="./MediaLibrary/Game-Detona-Ralph.mp4" type="video/mp4">
                 </video>
                 <h3>Game Click Detona Ralph</h3>
                 <p>Projeto criado utilizando as tecnologias HTML, CSS e JavaScript.</p>
@@ -85,7 +84,7 @@
 
             <div class="card-projetos">
                 <video muted>
-                    <source src="../MediaLibrary/Dev-Burguer_Cardápio-Online.mp4" type="video/mp4">
+                    <source src="./MediaLibrary/Dev-Burguer_Cardápio-Online.mp4" type="video/mp4">
                 </video>
                 <h3>cardapio-online2025</h3>
                 <p>Projeto criado utilizando as tecnologias HTML, CSS e JavaScript.</p>
