Remove prefixo docs/ em index.html (paths ajustados)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="inicio" class="principal">
         <div>
-            <img src="./MediaLibrary/foto-perfil.png" alt="Foto de Pedro Galvão" class="foto-circular">
+            <img src="../MediaLibrary/foto-perfil3.png" alt="Foto de Pedro Galvão" class="foto-circular">
             <h1>Olá, eu sou <span>Pedro Galvão</span>.</h1>
             <p>Desenvolvedor criativo focado em construir experiências digitais excepcionais e interfaces intuitivas.
             </p>
@@ -42,6 +42,7 @@
                 <video muted>
                     <source src="./MediaLibrary/Site-de-Serviços-Irmãos-Mario-Bross.mp4" type="video/mp4">
                 </video>
+                
                 <h3>Site de Serviços - Irmãos Mario Bross</h3>
                 <p>Projeto criado utilizando as tecnologias HTML, CSS e JavaScript.</p>
                 <a href="./MediaLibrary/Site-de-Serviços-Irmãos-Mario-Bross.mp4" class="botao-projeto">Ver Projeto</a>
@@ -112,7 +113,7 @@
         <a href="https://github.com/galvaomaisti" class="botao-GitHub">GitHub</a>
     </section>
 
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
